<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    android:orientation="vertical">

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefreshLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".ui.home.HomePageFragment"
            android:id="@+id/fragment_home"
            android:paddingBottom="20dp">

            <FrameLayout
                android:id="@+id/upperRegion"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:clickable="true"
                android:focusable="true"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@id/tvLastUpdated"
                app:layout_constraintBottom_toTopOf="@id/cvHourly"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:contextClickable="true"
                android:foreground="@drawable/selectable_background_ripple"/>

            <androidx.cardview.widget.CardView
                android:id="@+id/cvHourly"
                android:layout_width="0dp"
                android:layout_height="145dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="55dp"
                app:cardBackgroundColor="@color/transparent_blue"
                app:cardCornerRadius="12dp"
                app:cardElevation="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvFeelsLikeTemperature">



                <com.github.mikephil.charting.charts.LineChart
                    android:id="@+id/temperatureChart"
                    android:layout_width="match_parent"
                    android:layout_height="135dp"
                    android:orientation="horizontal"
                    android:layout_gravity="center"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="4dp"
                    android:clipToPadding="true"/>

            </androidx.cardview.widget.CardView>



            <TextView
                android:id="@+id/text_home"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:textAlignment="center"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.977" />

            <TextView
                android:id="@+id/tvDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:fontFamily="@font/fira_sans_extralight"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="30dp"
                app:layout_constraintVertical_bias="0.045" />

            <TextView
                android:id="@+id/tvLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxWidth="270sp"
                android:maxHeight="50sp"
                android:autoSizeTextType="uniform"
                android:autoSizeMinTextSize="12sp"
                android:autoSizeMaxTextSize="24sp"
                android:autoSizeStepGranularity="2sp"
                android:fontFamily="@font/fira_sans_medium"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:text=""
                app:layout_constraintStart_toEndOf="@id/currentLocationButton"
                app:layout_constraintTop_toBottomOf="@+id/tvDate"
                android:layout_marginTop="35dp"
                android:layout_marginStart="10dp"
                app:layout_constraintVertical_bias="0.087" />

            <ImageView
                android:id="@+id/ivClock"
                android:layout_width="16dp"
                android:layout_height="20dp"
                android:src="@drawable/ic_clock"
                app:layout_constraintTop_toBottomOf="@+id/tvLocation"
                app:layout_constraintStart_toStartOf="@id/currentLocationButton"
                app:layout_constraintEnd_toEndOf="@id/currentLocationButton"
                app:tint="@color/card_white"/>

            <TextView
                android:id="@+id/tvLastUpdated"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/tvLocation"
                app:layout_constraintStart_toStartOf="@id/tvLocation"
                android:text=""
                android:textColor="@color/white"
                android:fontFamily="@font/fira_sans_extralight"/>

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/weatherCodeAnimationView"
                android:layout_width="150dp"
                android:layout_height="150dp"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                android:layout_marginTop="-5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/tvTemperature"
                tools:src="@tools:sample/avatars"
                android:layout_marginEnd="50dp"/>

            <TextView
                android:id="@+id/tvTemperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="@color/white"
                android:textSize="90sp"
                android:fontFamily="@font/fira_sans_extralight"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvLastUpdated"
                android:layout_marginTop="50dp"
                android:layout_marginStart="40dp"/>

            <TextView
                android:id="@+id/tvTemperatureUnit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="@color/white"
                android:fontFamily="@font/fira_sans_medium"
                android:textSize="25sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@id/tvTemperature"
                app:layout_constraintTop_toTopOf="@+id/tvTemperature"
                android:layout_marginTop="20dp"/>

            <TextView
                android:id="@+id/tvFeelsLikeTemperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:fontFamily="@font/fira_sans_medium"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="@+id/tvTemperature"
                app:layout_constraintTop_toBottomOf="@+id/tvWeatherState"/>

            <TextView
                android:id="@+id/tvWeatherState"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:fontFamily="@font/fira_sans_extralight"
                android:textSize="18sp"
                android:textStyle="italic"
                app:layout_constraintStart_toStartOf="@id/tvFeelsLikeTemperature"
                app:layout_constraintTop_toBottomOf="@+id/tvTemperature"/>

            <ImageButton
                android:id="@+id/currentLocationButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:background="@android:color/transparent"
                android:src="@drawable/locations_24"
                app:layout_constraintStart_toStartOf="@id/tvTemperature"
                app:layout_constraintTop_toTopOf="@+id/tvLocation"
                app:tint="@color/white" />

            <ImageButton
                android:id="@+id/ttsBtn"
                android:layout_width="27dp"
                android:layout_height="27dp"
                android:background="@android:color/transparent"
                android:layout_marginStart="18dp"
                android:layout_marginTop="4dp"
                app:layout_constraintStart_toEndOf="@+id/tvLocation"
                app:layout_constraintTop_toTopOf="@+id/tvLocation"
                android:visibility="gone"
                app:srcCompat="@android:drawable/ic_lock_silent_mode_off" />

            <androidx.cardview.widget.CardView
                xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/daily_card"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cvHourly"
                android:layout_marginTop="20dp"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                app:cardCornerRadius="16dp"
                app:cardElevation="0dp"
                app:cardBackgroundColor="@color/transparent_blue"
                android:clickable="true"
                android:foreground="@drawable/selectable_background_ripple">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_marginHorizontal="18dp"
                    android:layout_height="wrap_content">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/dailyRecycler"
                        android:layout_marginTop="18dp"
                        android:layout_marginBottom="4dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tvMeteo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/daily_card"
                app:layout_constraintStart_toStartOf="@id/daily_card"
                android:layout_marginTop="10dp"
                android:layout_marginStart="5dp"
                android:text="Data by Open-Meteo.com"
                android:fontFamily="@font/fira_sans_extralight"
                android:textColor="@color/white"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tvMeteo"
                app:layout_constraintStart_toStartOf="@id/daily_card"
                android:layout_marginStart="5dp"
                android:text="Animated icons by basmilius"
                android:fontFamily="@font/fira_sans_extralight"
                android:textColor="@color/white"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</LinearLayout>